--- a/020416.css
+++ b/020416.css
@@ -1,15 +1,26 @@
 h1{
-margin: auto;
+
 font-size: 38px;
 font-family: sans-serif;
-position: fixed;
+text-align: center;
+
 }
 body{
-  background-image: url("images.jpg");
+  background-color: #ECECEC;
+  position: relative;
+  background-repeat: no-repeat;
+
 }
 
   #block {
-  	width: 10%;
-  	float: left;
+  	width: 3%;
+  	//float: left;
+    top: 1px;
   	margin-right: 10px;
   }
+footer{
+  font-size: 20px;
+  font-family: serif;
+  text-align: center;
+  bottom: 0;
+}
