--- a/css/020416.css
+++ b/css/020416.css
@@ -4,15 +4,18 @@ font-family: sans-serif;
 text-align: center;
 }
 body{
+ background-image: url("../images/1.png" ) ;
 	font-family: 'Lato', helvetica, arial, sans-serif;
 	 font-size: 13px;
    color: #222;
+   background-repeat: no-repeat;
+   background-size: cover;
+   /*opacity: 0.4;
+   filter: alpha(opacity=40);*/
+
  }
  header{
    position: relative;
- }
- #dd{
-   background-image: url("images/2.jpg");
  }
 
 #bg {
@@ -32,16 +35,26 @@ div {
 ul{
   margin-top: 1px;
   text-align: center;
+  color: #000;
+text-shadow: 2px 2px 8px #FF0000;
 }
 li {
-    text-decoration-color:#000;
+  color: #FFF;
   	display: inline;
   	padding:0;
   	margin:5px;
   }
+  li a {
+    font-size: 15px;
+    color: #FFF;
+    padding: 8px 0 8px 16px;
+    text-decoration: none;
+
+}
 footer{
-  font-size: 20px;
+  position: fixed;
+  font-size: 15px;
   font-family: serif;
-  text-align: center;
+text-shadow: 2px 2px 8px #4057A4;
   bottom: 0;
 }
