--- a/css/020416.css
+++ b/css/020416.css
@@ -14,6 +14,7 @@ body{
    filter: alpha(opacity=40);*/
 
  }
+
  header{
    position: relative;
  }
@@ -31,6 +32,9 @@ div {
 #nav {
   	margin:0;
   	padding:0;
+  }
+  figure{
+margin-top: 150px;
   }
 ul{
   margin-top: 1px;
