--- a/css/020416.css
+++ b/css/020416.css
@@ -31,15 +31,26 @@ fieldset{
 div {
     display: block;
 }
+h2{
+  font-family: sans-serif;
+  margin: 40%;
+  text-shadow: 1px 2px black;
+}
+.imageordi{
+  margin: 0 20%;
+}
   .figure1{
     border: 2px solid;
     border-radius: 10px;
     border-color: grey;
     background-color: white;
-    width: 80%;
-    height: 80%;
-    margin: 10%;
-    padding:3%;
+    width: 50px;
+    height: 400px;
+    margin-top: 8%;
+    margin-left: 1%;
+    padding:1%;
+    float: left;
+
   }
 ul{
   margin-top: 1px;
